about beneficiary marriage/parents family based

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -397,8 +397,10 @@
   "Language": "语言",
   "NativeLanguage": "母语",
   "FluentInEnglish": "我可以流利地说英语。",
+  "IsFluentInEnglish": "英语是否流利",
   "OtherFluentLanguagesLabel": "其他流利语言",
   "OtherFluentLanguages": "添加另一种你能流利说的语言",
+  
 
   "Change document": "更改上传文件",
 
@@ -419,6 +421,8 @@
   "Female": "女",
   "ApplyWithMe": "与我一起申请",
   "MaritalStatus": "婚姻状况",
+  "SelectMaritalStatus": "选择婚姻状况",
+  "SpouseMilitaryStatus": "伴侣婚姻状况",
   "Single": "未婚",
   "Married": "已婚",
   "Divorced": "离异",
@@ -426,6 +430,8 @@
   "Marriage": "婚姻",
   "MarriageDate": "婚姻日期",
   "MarriagePlace": "婚姻地点",
+  "NumberOfMarriages": "婚姻次数",
+  "EnterNumberOfMarriages": "输入婚姻次数",
   "PlaceOfLastEntryIntoUS": "最后一次进入美国的地点",
   "DateOfLastEntryIntoUS": "最后一次进入美国的日期",
   "LastAdmittedStatus": "最后一次入境的身份",
@@ -688,6 +694,20 @@
   "Spouse1": "配偶1",
   "DateMarriageEnded": "婚姻结束日期（mm/dd/yyyy）",
   "Spouse2": "配偶2",
+  "CurrentSpouseName": "当前配偶名称",
+  "CurrentSpouseAlienNumber": "当前配偶外国人注册号码(A-Number)",
+  "CurrentSpouseDateOfBirth": "当前配偶出生日期",
+  "CurrentSpouseDateOfMarriage": "当前配偶结婚日期",
+  "CurrentSpousePlaceOfBirth": "当前配偶出生地址",
+  "CurrentSpousePlaceOfMarriage": "当前配偶结婚地",
+  "CurrentSpouseApplying": "当前配偶申请中",
+  "SelectCurrentSpouseApplying": "选择当前配偶是否申请",
+  "PreviousSpouseInformation": "前一个配偶信息",
+  "PreviousSpouseName": "前一个配偶姓名",
+  "PreviousSpouseDateOfBirth": "前一个配偶出生日期",
+  "PreviousSpouseDateOfMarriage": "前一个配偶结婚日期",
+  "PreviousSpousePlaceOfMarriage": "前一个配偶结婚地",
+  "AddAnotherPreviousSpouse": "增加更多前配偶",
 
   "InformationAboutYourParents": "关于您父母的信息",
   "Parent 1": "父母1的信息",
@@ -815,6 +835,8 @@
   "Rescission": "撤销",
   "Other Judicial Proceedings": "其他司法程序",
   "DateInImmigrationProceedings": "日期（mm/dd/yyyy）",
+  "appliedImmigrationVisaBefore": "已提交移民签证",
+  "usEmbassies": "美国使馆",
 
   "Beneficiary'sNativeWrittenLanguageDoesNotUseRomanLetters": "如果受益人的母语书写系统不使用罗马字母，请用其母语书写他的名字和外国地址。",
   "FilingForSpouse": "如果为配偶提交申请，请提供你们共同居住的最后一个地址。如果从未共同居住，请在第59.a.项中填写“从未共同居住”。",
