--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -400,6 +400,7 @@
   "Language": "Language",
   "NativeLanguage": "Native Language",
   "FluentInEnglish": "I am fluent in English.",
+  "IsFluentInEnglish": "Is fluent in English",
   "OtherFluentLanguagesLabel": "Other Fluent Languages",
   "OtherFluentLanguages": "Add another language you speak fluently",
 
@@ -422,6 +423,8 @@
   "Female": "Female",
   "ApplyWithMe": "Applying with me",
   "MaritalStatus": "Marital Status",
+  "SelectMaritalStatus": "Select Marital Status",
+  "SpouseMilitaryStatus": "Spouse Military Status",
   "Single": "Single",
   "Married": "Married",
   "Divorced": "Divorced",
@@ -429,6 +432,8 @@
   "Marriage": "Marriage",
   "MarriageDate": "Date of Marriage",
   "MarriagePlace": "Place of Marriage",
+  "NumberOfMarriages": "Number Of Marriages",
+  "EnterNumberOfMarriages": "Enter Number Of Marriages",
   "PlaceOfLastEntryIntoUS": "Place of last entry into the U.S.",
   "DateOfLastEntryIntoUS": "Date of last entry into the U.S.",
   "LastAdmittedStatus": "Status when last admitted",
@@ -692,6 +697,21 @@
   "Spouse1": "Spouse 1",
   "DateMarriageEnded": "Date Marriage Ended (mm/dd/yyyy)",
   "Spouse2": "Spouse 2",
+  "CurrentSpouseName": "Current Spouse Name",
+  "CurrentSpouseAlienNumber": "Current Spouse Alien Number",
+  "CurrentSpouseDateOfBirth": "Current Spouse Date Of Birth",
+  "CurrentSpouseDateOfMarriage": "Current Spouse Date Of Marriage",
+  "CurrentSpousePlaceOfBirth": "Current Spouse Place Of Birth",
+  "CurrentSpousePlaceOfMarriage": "Current Spouse Place Of Marriage",
+  "CurrentSpouseApplying": "Current Spouse Applying",
+  "SelectCurrentSpouseApplying": "Select Current Spouse Applying",
+  "PreviousSpouseInformation": "Previous Spouse Information",
+  "PreviousSpouseName": "Previous Spouse Name",
+  "PreviousSpouseDateOfBirth": "Previous Spouse Date Of Birth",
+  "PreviousSpouseDateOfMarriage": "Previous Spouse Date Of Marriage",
+  "PreviousSpousePlaceOfMarriage": "Previous Spouse Place Of Marriage",
+  "AddAnotherPreviousSpouse": "Add Another Previous Spouse",
+  
 
   "InformationAboutYourParents": "Information About Your Parents",
   "Parent 1": "Parent 1's Information",
@@ -820,6 +840,8 @@
   "Rescission": "Rescission",
   "Other Judicial Proceedings": "Other Judicial Proceedings",
   "DateInImmigrationProceedings": "Date (mm/dd/yyyy)",
+  "appliedImmigrationVisaBefore": "applied Immigration Visa Before",
+  "usEmbassies": "us embassies",
 
   "Beneficiary'sNativeWrittenLanguageDoesNotUseRomanLetters": "If the beneficiary's native written language does not use Roman letters, type or print his or her name and foreign address in their native written language.",
   "FilingForSpouse": "If filing for your spouse, provide the last address at which you physically lived together. If you never lived together, type or print, \"Never lived together\" in Item Number 59.a.",
