--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -444,6 +444,13 @@
   "DateOfPreviousArrival": "If previously in the U.S., date of previous arrival",
   "IsSpouseIncludedInApplication": "Is your spouse to be included in this application?",
   "SpecifyLocation": "Please specify the current address.",
+  "AdmittedAtPortOfEntry": "Admitted At Port Of Entry",
+  "AdmissionEntryDetail": "Admission Entry Detail",
+  "ParoledAtPortOfEntry": "Paroled At Port Of Entry",
+  "ParoleEntranceDetail": "Parole Entrance Detail",
+  "EnteredWithoutAdmission": "Entered Without Admission",
+  "OtherEntryMethod": "Other Entry Method",
+  "OtherEntryDetail": "Other Entry Detail",
 
   "HaveChildren": "Do you have any children?",
   "Child": "Child",
@@ -480,6 +487,7 @@
   "City": "City",
   "State": "State",
   "ZipCode": "Zip Code",
+  "Province": "Province",
   "TelephoneNumberOfMailingInUs": "Telephone Number of Mailing Address in U.S.",
   "InCareOfName": "Recipient name",
   "MailingAddressInUs": "Mailing Address in U.S.",
@@ -498,11 +506,15 @@
 
   "Employment": "Employment",
   "AddEmployment": "Add employment",
-  "MostRecentEmployment": "Please provide your employment during the past 5 years. List your present employment first.",
   "NameAndAddressOfEmployer": "Name and Address of Employer",
   "Occupation": "Your Occupation",
   "StartDate": "Start Date",
   "EndDate": "End Date",
+  "MostRecentEmployment": "Please provide your employment during the past 5 years. List your present employment first.",
+  "mostRecentOutSideUsEmploymentHistory5YearsAgo": "Please provide the most recent outside your employment during the past 5 years",
+  "InUSA": "In USA?",
+  "DaytimePhoneNumber": "Day time Phone Number",
+  "MobilePhoneNumber": "Mobile Phone Number",
 
   "Address": "Address",
   "AddAddress": "Add an address",
@@ -751,6 +763,7 @@
   "Employer1": "Employer 1",
   "NameOfEmployer": "Name of Employer/Company",
   "Employer2": "Employer 2",
+  "StreetNumberAndNameOfEmployer": "Street Number And Name Of Employer",
 
   "BiographicInformation": "biographic_information",
   "BiographicInformationNote": "NOTE: Provide the biographic information about you, the petitioner.",
