Update the form for statement section + intepreter

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -959,6 +959,29 @@
   "CompliedWithForeignResidence": "Have you complied with the foreign residence requirement?",
   "GrantedWaiverOrRecommendation": "Have you been granted a waiver or has Department of State issued a favorable waiver recommendation letter for you?",
 
+  "Statement1": "Statement 1",
+  "Statement2": "Statement 2",
+  "SpouseBeneficiaryStatementDescription": "Select the box that describes the beneficiary's statement",
+  "CanReadAndUnderstandEnglishCheckbox": "I can read and understand English, and I have read and understand every question and instruction on this form and my answer to every question.",
+  "InterpreterReadAndTranslatedCheckbox": "The interpreter read to me every question and instruction on this form and my answer to every question ina language in which I am fluent, and I understood everything.",
+  "EnterLanguageInterpreterReadAndTranslated": "Enter the language the interpreter read and translated to you",
+  "PreparerAssistanceCheckbox": "At my request, the preparer prepared this form for me based only upon information I provided or authorized.",
+  "EnterPreparerAssistanceName": "Please enter the name of the preparer who assisted you",
+  "CompleteInterpreterInformationNextSection": "Please fill out the interpreter information in the next section as you used an interpreter to complete this form.",
+  "SkipInterpreterInformationNextSection": "Since you did not use an interpreter to complete this form, you can skip the interpreter information form in the next section.",
+  "InterpreterFamilyNameAndGivenName": "Interpreter's Family Name (Last Name) and Given Name (First Name)",
+  "InterpreterBusinessName": "Interpreter's Business or Organization Name (if any)",
+  "InterpreterContactInformation": "Interpreter's Contact Information",
+  "InterpreterMailingAddress": "Interpreter's Mailing Address",
+  "InterpreterDaytimeTelephoneNumber": "Interpreter's Daytime Telephone Number",
+  "InterpreterMobileTelephoneNumber": "Interpreter's Mobile Telephone Number (if any)",
+  "InterpreterEmailAddress": "Interpreter's Email Address (if any)",
+  "InterpreterCertification": "Interpreter's Certification",
+  "InterpreterFluentInEnglishAndTranslatedLanguage": "I certify, under penalty of perjury, that I am fluent in English and the language I translated to the beneficiary, and I have read to the beneficiary in the identified language every question and instruction on this form and his or her answer to every question. The beneficiary informed me that he or she understands every instruction, question, and answer on the form, including the beneficiary's declaration and certification, and has verified the accuracy of every answer.",
+  "EnterTranslatedLanguage": "Please enter the language you translated to the beneficiary",
+  "CompletePreparerInformationNextSection": "Please fill out the preparer information in the next section as you used a preparer to complete this form.",
+  "SkipPreparerInformationNextSection": "Since you did not use a preparer to complete this form, you can skip the preparer information form in the next section.",
+
   "RaceOptions": [
     "American Indian or Alaska Native",
     "Asian",
