about beneficiary Additional2 family based

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -400,6 +400,11 @@
   "IsFluentInEnglish": "英语是否流利",
   "OtherFluentLanguagesLabel": "其他流利语言",
   "OtherFluentLanguages": "添加另一种你能流利说的语言",
+  "NameUsedNativeLanguage": "母语名",
+  "AddressInNativeLanguage": "在母语中的地址",
+  "LastAddressLivedTogether": "最近在一起生活的地址",
+  "HasSocialSecurityCard": "有社保卡?",
+  "AppliedForImmigrantVisa": "已申请移民签证?",
 
   "Change document": "更改上传文件",
 
@@ -441,6 +446,7 @@
   "DateOfPreviousArrival": "如果之前在美国，请提供上次抵达的日期",
   "IsSpouseIncludedInApplication": "您的配偶是否包含在此申请中？",
   "SpecifyLocation": "请填写当前地址。",
+  "ArrivedAsAdmission": "到达时被允许",
   "AdmittedAtPortOfEntry": "在入境口岸入境",
   "AdmissionEntryDetail": "入境详情",
   "ParoledAtPortOfEntry": "入境时假释",
@@ -448,6 +454,18 @@
   "EnteredWithoutAdmission": "入境时没有被允许",
   "OtherEntryMethod": "其他入境方式",
   "OtherEntryDetail": "其他入境时详情",
+  "AuthorizedStayExpirationDate": "授权逗留期限",
+  "ExpirationDateForPassport": "护照有效期",
+  "VisaNumber": "签证号码",
+  "ArrivalCity": "落脚城市",
+  "ArrivalState": "落脚州",
+  "CurrentImmigrationStatus": "当前移民身份",
+  "ImmigrationProceedings": "是否有移民诉讼?",
+  "TypeOfProceedings": "诉讼类型",
+  "OtherJudicialProceedings": "其他司法诉讼",
+  "CityOrTownOfProceedings": "诉讼所在城市/镇",
+  "StateOfProceedings": "诉讼所在州",
+  "DateOfProceedings": "诉讼时间",
 
   "HaveChildren": "您是否有子女？",
   "Child": "子女",
