--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -403,6 +403,11 @@
   "IsFluentInEnglish": "Is fluent in English",
   "OtherFluentLanguagesLabel": "Other Fluent Languages",
   "OtherFluentLanguages": "Add another language you speak fluently",
+  "NameUsedNativeLanguage": "Name Used Native Language",
+  "AddressInNativeLanguage": "Address In Native Language",
+  "LastAddressLivedTogether": "Last Address Lived Together",
+  "HasSocialSecurityCard": "Has Social Security Card?",
+  "AppliedForImmigrantVisa": "Applied For Immigrant Visa?",
 
   "Change document": "Change uploaded document",
 
@@ -444,6 +449,7 @@
   "DateOfPreviousArrival": "If previously in the U.S., date of previous arrival",
   "IsSpouseIncludedInApplication": "Is your spouse to be included in this application?",
   "SpecifyLocation": "Please specify the current address.",
+  "ArrivedAsAdmission": "Arrived As Admission",
   "AdmittedAtPortOfEntry": "Admitted At Port Of Entry",
   "AdmissionEntryDetail": "Admission Entry Detail",
   "ParoledAtPortOfEntry": "Paroled At Port Of Entry",
@@ -451,6 +457,18 @@
   "EnteredWithoutAdmission": "Entered Without Admission",
   "OtherEntryMethod": "Other Entry Method",
   "OtherEntryDetail": "Other Entry Detail",
+  "AuthorizedStayExpirationDate": "Authorized Stay Expiration Date",
+  "ExpirationDateForPassport": "Expiration Date For Passport",
+  "VisaNumber": "Visa Number",
+  "ArrivalCity": "Arrival City",
+  "ArrivalState": "Arrival State",
+  "CurrentImmigrationStatus": "Current Immigration Status",
+  "ImmigrationProceedings": "Is There Immigration Proceedings?",
+  "TypeOfProceedings": "Type Of Proceeding",
+  "OtherJudicialProceedings": "Other Judicial Proceedings",
+  "CityOrTownOfProceedings": "City Or Town Of Proceedings",
+  "StateOfProceedings": "State Of Proceedings",
+  "DateOfProceedings": "Date of Proceedings",
 
   "HaveChildren": "Do you have any children?",
   "Child": "Child",
