Add the address common component and implement the same address module

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -977,7 +977,7 @@
   "CompliedWithForeignResidence": "Have you complied with the foreign residence requirement?",
   "GrantedWaiverOrRecommendation": "Have you been granted a waiver or has Department of State issued a favorable waiver recommendation letter for you?",
 
-  "Apartment": "Apartment",
+  "Apartment": "Apt",
   "Ste": "Ste",
   "Flr": "Flr",
   "Statement": "Statement",
@@ -1294,6 +1294,59 @@
     "VISA EXTENSION",
     "CHANGE OF STATUS",
     "OTHER"
+  ],
+  "StateOptions": [
+    "Alabama",
+    "Alaska",
+    "Arizona",
+    "Arkansas",
+    "California",
+    "Colorado",
+    "Connecticut",
+    "Delaware",
+    "District of Columbia",
+    "Florida",
+    "Georgia",
+    "Hawaii",
+    "Idaho",
+    "Illinois",
+    "Indiana",
+    "Iowa",
+    "Kansas",
+    "Kentucky",
+    "Louisiana",
+    "Maine",
+    "Maryland",
+    "Massachusetts",
+    "Michigan",
+    "Minnesota",
+    "Mississippi",
+    "Missouri",
+    "Montana",
+    "Nebraska",
+    "Nevada",
+    "New Hampshire",
+    "New Jersey",
+    "New Mexico",
+    "New York",
+    "North Carolina",
+    "North Dakota",
+    "Ohio",
+    "Oklahoma",
+    "Oregon",
+    "Pennsylvania",
+    "Rhode Island",
+    "South Carolina",
+    "South Dakota",
+    "Tennessee",
+    "Texas",
+    "Utah",
+    "Vermont",
+    "Virginia",
+    "Washington",
+    "West Virginia",
+    "Wisconsin",
+    "Wyoming"
   ],
 
   "Organizations": "Organizations",
