--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -950,6 +950,75 @@
   "ProvidedSupportForGroupInvolvedInSeriousCrime": "Provided money, a thing of value, services or labor, or any other assistance or support for any of the activities described in Item Number 48.a.?",
   "ProvidedSupportForIndividualOrGroup": "Provided money, a thing of value, services or labor, or any other assistance or support for an individual, group, or organization who did any of the activities described in Item Number 48.a.?",
 
+  "HouseholdSize": "What is the size of your household?",
+  "HouseholdIncomeRange": "Indicate your annual household income.",
+  "0to27k": "$0-27,000",
+  "27kto52k": "$27,001-52,000",
+  "52kto85k": "$52,001-85,000",
+  "85kto141k": "$85,001-141,000",
+  "Over141k": "Over $141,000",
+  "HouseholdAssetsValue": "Identify the total value of your household assets.",
+  "0to18k": "$0-18,400",
+  "18kto136k": "$18,401-136,000",
+  "136kto321k": "$136,001-321,400",
+  "321kto707k": "$321,401-707,100",
+  "Over707k": "Over $707,100",
+  "LiabilitiesValue": "Identify the total value of your household liabilities (including both secured and unsecured liabilities).",
+  "0": "$0",
+  "1kto10k": "$1-10,100",
+  "10kto57k": "$10,101-57,700",
+  "57kto186k": "$57,701-186,800",
+  "Over186k": "Over $186,800",
+  "EducationLevel": "What is the highest degree or level of school you have completed?",
+  "Grades1to11": "Grades 1 through 11",
+  "12thNoDiploma": "12th grade - no diploma",
+  "HighSchoolDiploma": "High school diploma, GED, or alternative credential",
+  "SomeCollegeNoDegree": "1 or more years of college credit, no degree",
+  "AssociatesDegree": "Associate's degree",
+  "BachelorsDegree": "Bachelor's degree",
+  "MastersDegree": "Master's degree",
+  "ProfessionalDegree": "Professional degree (JD, MD, DMD, etc.)",
+  "DoctorateDegree": "Doctorate degree",
+  "CertificationsLicensesSkills": "List your certifications, licenses, skills obtained through work experience, and educational certificates.",
+  "ReceivedSSIOrTANF": "Have you ever received Supplemental Security Income (SSI), Temporary Assistance for Needy Families (TANF), or State, Tribal, territorial, or local, cash benefit programs for income maintenance (often called “General Assistance” in the State context, but which also exist under other names)?",
+  "ReceivedInstitutionalization": "Have you ever received long-term institutionalization at government expense?",
+  "BenefitRecordsDescription": "List the specific benefit(s) you received, the start and end dates of each period of receipt, and the dollar amount of benefits received.",
+  "BenefitReceived": "Benefit Received",
+  "DollarAmount": "Dollar Amount",
+  "InstitutionalizationRecordsDescription": "List the name, city, and state for each institution, the start and end dates of each period of institutionalization, and the reason you were institutionalized.",
+  "InstitutionNameCityState": "Institution Name/City/State",
+  "InstitutionStartDate": "Date From",
+  "InstitutionEndDate": "Date To",
+  "Reason": "Reason",
+  "FailedToAttendRemovalProceeding": "Have you EVER failed or refused to attend or to remain in attendance at any removal proceeding filed against you on or after April 1, 1997?",
+  "BelieveHadReasonableCause": "Do you believe you had reasonable cause?",
+  "StatementOfReasonableCause": "If your answer to Item Number 69.b. is \"Yes,\" attach a written statement explaining why you had reasonable cause.",
+  "SubmittedFraudulentDocumentation": "Have you EVER submitted fraudulent or counterfeit documentation to any U.S. Government official to obtain or attempt to obtain any immigration benefit, including a visa or entry into the United States?",
+  "LiedOrMisrepresentedForImmigrationBenefit": "Have you EVER lied about, concealed, or misrepresented any information on an application or petition to obtain a visa, other documentation required for entry into the United States, admission to the United States, or any other kind of immigration benefit?",
+  "FalselyClaimedUSCitizenship": "Have you EVER falsely claimed to be a U.S. citizen (in writing or any other way)?",
+  "BeenAStowaway": "Have you EVER been a stowaway on a vessel or aircraft arriving in the United States?",
+  "KnowinglyEncouragedIllegalEntry": "Have you EVER knowingly encouraged, induced, assisted, abetted, or aided any foreign national to enter or to try to enter the United States illegally (alien smuggling)?",
+  "UnderCivilPenaltyForFraudulentDocuments": "Are you under a final order of civil penalty for violating INA section 274C for use of fraudulent documents?",
+  "ExcludedDeportedOrRemoved": "Have you EVER been excluded, deported, or removed from the United States or have you ever departed the United States on your own after having been ordered excluded, deported, or removed from the United States?",
+  "EnteredWithoutInspection": "Have you EVER entered the United States without being inspected and admitted or paroled?",
+  "UnlawfullyPresentInUS": "Since April 1, 1997, have you been unlawfully present in the United States:",
+  "UnlawfullyPresent180DaysTo1Year": "For more than 180 days but less than a year, and then departed the United States?",
+  "UnlawfullyPresent1YearOrMore": "For one year or more and then departed the United States?",
+  "NoteOfItem78": "NOTE: You were unlawfully present in the United States if you entered the United States without being inspected and admitted or inspected and paroled, or if you legally entered the United States but you stayed longer than permitted.",
+  "ReenterUSWithoutInspection": "Since April 1, 1997, have you EVER reentered or attempted to reenter the United States without being inspected and admitted or paroled after:",
+  "ReenteredAfterUnlawfullyPresent": "Having been unlawfully present in the United States for more than one year in the aggregate?",
+  "ReenteredAfterDeportation": "Having been deported, excluded, or removed from the United States?",
+  "PlanToPracticePolygamy": "Do you plan to practice polygamy in the United States?",
+  "AccompanyingInadmissibleForeignNational": "Are you accompanying another foreign national who requires your protection or guardianship but who is inadmissible after being certified by a medical officer as being helpless from sickness, physical or mental disability, or infancy, as described in INA section 232(c)?",
+  "AssistedInWithholdingCustody": "Have you EVER assisted in detaining, retaining, or withholding custody of a U.S. citizen child outside the United States from a U.S. citizen who has been granted custody of the child?",
+  "VotedInViolationOfLaw": "Have you EVER voted in violation of any Federal, state, or local constitutional provision, statute, ordinance, or regulation in the United States?",
+  "RenouncedCitizenshipToAvoidTax": "Have you EVER renounced U.S. citizenship to avoid being taxed by the United States?",
+  "AppliedForExemptionFromMilitaryService": "Applied for exemption or discharge from training or service in the U.S. armed forces or in the U.S. National Security Training Corps on the ground that you are a foreign national?",
+  "RelievedFromMilitaryService": "Been relieved or discharged from such training or service on the ground that you are a foreign national?",
+  "ConvictedOfDesertion": "Been convicted of desertion from the U.S. armed forces?",
+  "EvadedMilitaryServiceDuringWar": "Have you EVER left or remained outside the United States to avoid or evade training or service in the U.S. armed forces in time of war or a period declared by the President to be a national emergency?",
+  "NationalityOrStatusBeforeEvadingMilitaryService": "what was your nationality or immigration status immediately before you left(for example, U.S. citizen or national, lawful permanent resident, non-immigrant, parolee, present without admission or parole, or any other status)?",
+
   "RaceOptions": [
     "American Indian or Alaska Native",
     "Asian",
