about pitetioner family based

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -714,9 +714,11 @@
   "HowManyTimesHaveYouBeenMarried": "您结过几次婚？",
   "CurrentMaritalStatus": "当前婚姻状况",
   "SingleNeverMarried": "单身，从未结婚",
+  "CurrentMarriage": "当前婚姻",
   "DateOfCurrentMarriage": "当前婚姻日期（如果目前已婚）（mm/dd/yyyy）",
   "PlaceofYourCurrentMarriage(if married)": "当前婚姻地点（如果已婚）",
   "CityorTownOfCurrentMarriage": "城市或镇",
+  "CityOfCurrentMarriage": "城市或镇",
   "StateOfCurrentMarriage": "州",
   "ProvinceOfCurrentMarriage": "省",
   "CountryOfCurrentMarriage": "国家",
@@ -785,7 +787,6 @@
   "Employer1": "雇主1",
   "NameOfEmployer": "雇主/公司名称",
   "Employer2": "雇主2",
-  "StreetNumberAndNameOfEmployer": "雇主/公司的街道名和街道号",
 
   "BiographicInformation": "传记信息",
   "BiographicInformationNote": "注意：提供关于您的传记信息，申请人。",
@@ -802,7 +803,7 @@
   "HeightFeet": "英尺",
   "HeightInches": "英寸",
   "Weight": "体重",
-  "WeightPounds(Need to update with three digits)": "磅",
+  "WeightPounds(Need to update with three digits)": "磅(最多三位数)",
   "EyeColor": "眼睛颜色（仅选择一个框）",
   "EyeColorBlack": "黑色",
   "Blue": "蓝色",
