--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -719,9 +719,11 @@
   "HowManyTimesHaveYouBeenMarried": "How many times have you been married?",
   "CurrentMaritalStatus": "Current Marital Status",
   "SingleNeverMarried": "Single, Never Married",
+  "CurrentMarriage": "Current Marriage",
   "DateOfCurrentMarriage": "Date of Current Marriage (if currently married)(mm/dd/yyyy)",
   "PlaceofYourCurrentMarriage(if married)": "Place of Your Current Marriage (if married)",
   "CityorTownOfCurrentMarriage": "City or Town",
+  "CityOfCurrentMarriage": "City or Town",
   "StateOfCurrentMarriage": "State",
   "ProvinceOfCurrentMarriage": "Province",
   "CountryOfCurrentMarriage": "Country",
@@ -790,7 +792,6 @@
   "Employer1": "Employer 1",
   "NameOfEmployer": "Name of Employer/Company",
   "Employer2": "Employer 2",
-  "StreetNumberAndNameOfEmployer": "Street Number And Name Of Employer",
 
   "BiographicInformation": "biographic_information",
   "BiographicInformationNote": "NOTE: Provide the biographic information about you, the petitioner.",
@@ -807,7 +808,7 @@
   "HeightFeet": "Feet",
   "HeightInches": "Inches",
   "Weight": "Weight",
-  "WeightPounds(Need to update with three digits)": "Pounds",
+  "WeightPounds(Need to update with three digits)": "Pounds(Up to three digits)",
   "EyeColor": "Eye Color (Select only one box)",
   "EyeColorBlack": "Black",
   "Blue": "Blue",
