--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -1125,6 +1125,7 @@
   "SubstituteSponsorRelationship": "您选择了您是替代担保人的选项。您是预期移民的",
 
   "NameOfPrincipalImmigrant": "主要移民的姓名",
+  "FiledPetition": "您是否曾为主要移民提交过申请？",
 
   "RaceOptions": [
     "美洲印第安人或阿拉斯加土著",
