--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -1128,6 +1128,8 @@
   "NameOfPrincipalImmigrant": "主要移民的姓名",
   "FiledPetition": "您是否曾为主要移民提交过申请？",
 
+  "AddASpouse": "添加配偶",
+
   "RaceOptions": [
     "美洲印第安人或阿拉斯加土著",
     "亚洲人",
