--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1133,6 +1133,8 @@
   "NameOfPrincipalImmigrant": "Name of the Principal Immigrant",
   "FiledPetition": "Have you EVER filed a petition for this or any other alien?",
 
+  "AddASpouse": "Add a Spouse",
+
   "RaceOptions": [
     "American Indian or Alaska Native",
     "Asian",
