--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -404,7 +404,7 @@
   "OtherFluentLanguagesLabel": "Other Fluent Languages",
   "OtherFluentLanguages": "Add another language you speak fluently",
   "NameUsedNativeLanguage": "Name Used Native Language",
-  "AddressInNativeLanguage": "Address In Native Language",
+  "AddressInNativeLanguage": "Foreign Address In Native Written Language",
   "LastAddressLivedTogether": "Last Address Lived Together",
   "AdjustmentOfStatusCity": "City Or Town Where Apply For Adjustment Of Status Of Lawful Permanent Resident",
   "AdjustmentOfStatusState": "State Where Apply For Adjustment Of Status Of Lawful Permanent Resident",
@@ -713,7 +713,7 @@
   "DateTo": "Date To (mm/dd/yyyy)",
   "Physical Address 2": "Physical Address 2",
   "outsideUsAddress": "Outside Us Address",
-  "mostRecentOutSideUsAddressBefore5YearsAgo": "Provide the most recent beneficiary's address outside the Us 5 years ago",
+  "mostRecentOutSideUsAddressBefore5YearsAgo": "Provide the most recent beneficiary's address outside the US 5 years ago",
 
   "MaritalInformation": "Your Marital Information",
   "HowManyTimesHaveYouBeenMarried": "How many times have you been married?",
